2005-09-19  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/JRootPane.java:
	(RootPaneLayout.layoutContainer): Added comment about how the 
	components should be sized.  Fixed size of glassPane which fills the 
	entire viewable region, including overtop the menuBar.  Used bounds 
	minus insets for containerSize, as indicated in comment, rather than 
	getSize().  Used setBounds instead of setSize for layeredPane because 
	its relation to the other components' sizes is more obvious that way.

2005-09-19  Anthony Balkissoon  <abalkiss@redhat.com>

	* javax/swing/plaf/basic/BasicInternalFrameUI.java:
	(GlassPaneDispatcher.handleEvent): Replaced call to SwingUtilities' 
	convertMouseEvent (with identical source and desination) with a simple 
	cast.  If acquireComponentForMouseEvent reveals we're going to 
	re-dispatch this event to ourselves (and loop infinitely), return. Also
	replaced contentPane by glassPane as the source argument to 
	SwingUtilities.convertMouseEvent since the glassPane is the real source.
2005-09-19  David Gilbert  <david.gilbert@object-refinery.com>

	* javax/swing/plaf/basic/BasicArrowButton.java
	(paintTriangle): minor correction to highlight on triangle for disabled
	buttons.
	
2005-09-19  Tom Tromey  <tromey@redhat.com>

	* javax/print/DocFlavor.java (BYTE_ARRAY.serialVersionUID): New field.
	(INPUT_STREAM.serialVersionUID): Likewise.

2005-09-19  Tom Tromey  <tromey@redhat.com>

	* java/text/DateFormat.java (serialVersionUID): New field.

2005-19-19  Lillian Angel  <langel@redhat.com>

	* javax/swing/plaf/basic/BasicTreeUI.java
	(selectPath): Changed so DISCONTIGUOUS_TREE_SELECTION is the
	default.
	* javax/swing/JTree.java
	(AccessibleJTreeNode): Initialized all fields.
	(addAccessibleSelection): Implemented.
	(clearAccessibleSelection): Implemented.
	(doAccessibleAction): Implemented.
	(getAccessibleAction): Implemented.
	(getAccessibleActionCount): Implemented.
	(getAccessibleActionDescription): Implemented.